home page banner text overlaping form issue fixed

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -41,7 +41,7 @@
 	  top:64px;
 	}
 	@include breakpoint($tablet){
-		top: 100px; 
+		top: 111px; 
 	}
 	
 	.r-s-arrow{
@@ -393,15 +393,4 @@
 }
 
 
-// school page
-.view-tree-house-school-stream, .view-tree-house-school-values{
-  .view-footer{
-    .btn.btn-green{
-      .icon-Rightarrow{
-        position: relative;
-        top: 3px;
-        left: 4px;
-      }
-    }
-  }
-}
+
